--- a/wiboparent/pom.xml
+++ b/wiboparent/pom.xml
@@ -11,6 +11,8 @@
         <module>spring-socket</module>
         <module>springboot-zuul</module>
         <module>springboot-kafka</module>
+        <module>springboot-fastdfs</module>
+        <module>springboot-test</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
